{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 26,
  "lineage": "0835112b-64d8-fab9-15d6-377cbd1f0a85",
  "resources": [
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0efffdc4462c668f7",
            "public_dns": "ec2-3-218-191-254.compute-1.amazonaws.com",
            "public_ip": "3.218.191.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d0be0e68148c4ea8",
            "public_dns": "ec2-44-217-180-84.compute-1.amazonaws.com",
            "public_ip": "44.217.180.84",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591036564441:internet-gateway/igw-0eb59ec0a4d610774",
            "id": "igw-0eb59ec0a4d610774",
            "owner_id": "591036564441",
            "tags": {
              "Name": "igw_main"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0efffdc4462c668f7",
            "id": "nat-0e3af580a93327289",
            "network_interface_id": "eni-03c8f8b043cb9fddc",
            "private_ip": "10.0.0.230",
            "public_ip": "3.218.191.254",
            "subnet_id": "subnet-00538518ba4a61670",
            "tags": {
              "Name": "gw NAT1"
            }
          },
          "dependencies": [
            "module.network_module.aws_eip.nat1",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0be0e68148c4ea8",
            "id": "nat-0b74f07194638572a",
            "network_interface_id": "eni-031a3fc922b2eb03f",
            "private_ip": "10.0.1.65",
            "public_ip": "44.217.180.84",
            "subnet_id": "subnet-035286b6e22704932",
            "tags": {
              "Name": "gw NAT2"
            }
          },
          "dependencies": [
            "module.network_module.aws_eip.nat2",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dca47101e7fee64e",
            "owner_id": "591036564441",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3af580a93327289",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1_route_table"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_eip.nat1",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw1",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d2d1baca11bbea08",
            "owner_id": "591036564441",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b74f07194638572a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2_route_table"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_eip.nat2",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw2",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-080622d8e5be4b54a",
            "owner_id": "591036564441",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb59ec0a4d610774",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a44e8514eff8d92",
            "route_table_id": "rtb-0dca47101e7fee64e",
            "subnet_id": "subnet-07ee0a40ba487d2ef"
          },
          "dependencies": [
            "module.network_module.aws_eip.nat1",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw1",
            "module.network_module.aws_route_table.private1_route_table",
            "module.network_module.aws_subnet.private_us_east_1a",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a733e07ed741906",
            "route_table_id": "rtb-0d2d1baca11bbea08",
            "subnet_id": "subnet-0c6288b22c6e9c6f9"
          },
          "dependencies": [
            "module.network_module.aws_eip.nat2",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw2",
            "module.network_module.aws_route_table.private2_route_table",
            "module.network_module.aws_subnet.private_us_east_1b",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4031b6165d4dc4b",
            "route_table_id": "rtb-080622d8e5be4b54a",
            "subnet_id": "subnet-00538518ba4a61670"
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_route_table.public_route_table",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09187229550aa7607",
            "route_table_id": "rtb-080622d8e5be4b54a",
            "subnet_id": "subnet-035286b6e22704932"
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_route_table.public_route_table",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591036564441:subnet/subnet-07ee0a40ba487d2ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07ee0a40ba487d2ef",
            "map_public_ip_on_launch": false,
            "owner_id": "591036564441",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591036564441:subnet/subnet-0c6288b22c6e9c6f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c6288b22c6e9c6f9",
            "map_public_ip_on_launch": false,
            "owner_id": "591036564441",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591036564441:subnet/subnet-00538518ba4a61670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00538518ba4a61670",
            "map_public_ip_on_launch": true,
            "owner_id": "591036564441",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591036564441:subnet/subnet-035286b6e22704932",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-035286b6e22704932",
            "map_public_ip_on_launch": true,
            "owner_id": "591036564441",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0114f7b2a523eaded"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591036564441:vpc/vpc-0114f7b2a523eaded",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-011e0f27477d154f9",
            "default_route_table_id": "rtb-05bc38dcb7576d2ea",
            "default_security_group_id": "sg-0f6203908e4af6fca",
            "dhcp_options_id": "dopt-0004fa54f8c62bd6c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0114f7b2a523eaded",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05bc38dcb7576d2ea",
            "owner_id": "591036564441",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}